apps/bgd/overlays/bgd/bgd-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bgd3
  name: bgd3
  namespace: bgd3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bgd3
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: bgd3
    spec:
      containers:
      - image: quay.io/rhdevelopers/bgd:1.0.0
        name: bgd3
        resources: {}
---
