apps/bgd/overlays/bgd/bgd-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bgd3
  name: bgd3
  namespace: bgd3
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: bgd3
---
