apps/bgd/overlays/bgd/bgd-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: bgd3
  name: bgd3
  namespace: bgd3
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: bgd3
    weight: 100
